alterations and fixes

--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "cacache": "^19.0.1",
     "config": "^3.3.12",
     "cookie-parser": "^1.4.7",
-    "csurf": "^1.11.0",
+    "csrf-csrf": "^3.1.0",
     "express": "4.21.2",
     "express-nunjucks": "^3.1.2",
     "glob-parent": "6.0.2",
@@ -104,7 +104,7 @@
     "nock": "^13.5.6",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
-    "pa11y": "^8.0.0",
+    "pa11y": "^6.2.3",
     "playwright": "1.49.1",
     "request": "^2.88.2",
     "sass": "^1.82.0",
@@ -124,9 +124,9 @@
     "webpack-node-externals": "^3.0.0"
   },
   "resolutions": {
-    "@babel/runtime": "^7.26.10",
-    "sass-lint/merge": ">=2.1.1",
-    "uglifyjs-webpack-plugin/serialize-javascript": ">=3.1.0",
+    "@babel/runtime": "7.26.10",
+    "sass-lint/merge": "2.1.1",
+    "uglifyjs-webpack-plugin/serialize-javascript": "3.1.0",
     "@hmcts/nodejs-logging/moment": ">=2.29.4",
     "qs": ">=6.5.3",
     "json5": ">=2.2.2",
