--- a/charts/fact-frontend/Chart.yaml
+++ b/charts/fact-frontend/Chart.yaml
@@ -6,5 +6,5 @@ home: https://github.com/hmcts/fact-frontend
 version: 0.0.30
 dependencies:
   - name: nodejs
-    version: 3.1.0
-    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    version: 3.2.0
+    repository: 'oci://hmctspublic.azurecr.io/helm'
