--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "express": "4.21.2",
     "express-nunjucks": "^3.1.2",
     "glob-parent": "6.0.2",
-    "govuk-frontend": "^4.9.0",
+    "govuk-frontend": "^5.10.0",
     "helmet": "^4.6.0",
     "http-proxy-middleware": "^2.0.9",
     "i18next": "^21.10.0",
@@ -76,6 +76,7 @@
     "@playwright/test": "^1.52.0",
     "@types/chai-as-promised": "^8.0.2",
     "@types/cucumber": "^7.0.3",
+    "@types/govuk-frontend": "^5",
     "@types/jest": "^29.5.14",
     "@types/jest-when": "^3.5.5",
     "@types/supertest": "^2.0.16",
@@ -148,5 +149,5 @@
     "@npmcli/fs": "^4.0.0",
     "formidable": "3.5.4"
   },
-  "packageManager": "yarn@4.6.0"
+  "packageManager": "yarn@4.9.1"
 }
