--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=20.16.0"
   },
   "scripts": {
     "start": "NODE_ENV=production ts-node -r tsconfig-paths/register src/main/server.ts",
@@ -33,32 +33,31 @@
     "@npmcli/fs": "^4.0.0",
     "@types/config": "^3.3.5",
     "@types/cookie-parser": "^1.4.8",
-    "@types/csurf": "^1.11.5",
     "@types/es6-promisify": "^6.0.4",
-    "@types/express": "^5.0.0",
+    "@types/express": "^5.0.1",
     "@types/glob": "^8.1.0",
     "@types/helmet": "^0.0.48",
     "@types/lodash": "^4.17.16",
-    "@types/node": "^18.19.80",
+    "@types/node": "^18.19.99",
     "@types/nunjucks": "^3.2.6",
     "@types/require-directory": "^2.1.6",
     "@types/serve-favicon": "^2.5.7",
     "applicationinsights": "^2.9.6",
     "autobind-decorator": "^2.4.0",
     "awilix": "^7.0.3",
-    "axios": "1.8.3",
+    "axios": "1.9.0",
     "cacache": "^19.0.1",
     "config": "^3.3.12",
     "cookie-parser": "^1.4.7",
-    "csrf-csrf": "^3.1.0",
+    "csrf-csrf": "^3.2.2",
     "express": "4.21.2",
     "express-nunjucks": "^3.1.2",
     "glob-parent": "6.0.2",
-    "govuk-frontend": "^4.9.0",
+    "govuk-frontend": "^5.10.0",
     "helmet": "^4.6.0",
-    "http-proxy-middleware": "^2.0.7",
+    "http-proxy-middleware": "^2.0.9",
     "i18next": "^21.10.0",
-    "i18next-http-middleware": "^3.7.1",
+    "i18next-http-middleware": "^3.7.4",
     "jquery": "^3.7.1",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
@@ -70,11 +69,11 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.10",
-    "@babel/preset-env": "^7.26.9",
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
     "@codeceptjs/allure-legacy": "^1.0.2",
     "@codeceptjs/configure": "^0.10.0",
-    "@playwright/test": "^1.49.1",
+    "@playwright/test": "^1.52.0",
     "@types/chai-as-promised": "^8.0.2",
     "@types/cucumber": "^7.0.3",
     "@types/jest": "^29.5.14",
@@ -84,14 +83,14 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/eslint-plugin-tslint": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "allure-commandline": "^2.32.0",
+    "allure-commandline": "^2.34.0",
     "allure-playwright": "^2.15.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.2.1",
     "chai": "^4.5.0",
     "chai-as-promised": "^7.1.2",
     "chokidar": "^3.6.0",
-    "codeceptjs": "^3.5.6",
+    "codeceptjs": "^3.7.3",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "cucumber": "^6.0.7",
@@ -105,20 +104,20 @@
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "pa11y": "8.0.0",
-    "playwright": "1.49.1",
+    "playwright": "1.52.0",
     "request": "^2.88.2",
-    "sass": "^1.82.0",
+    "sass": "^1.87.0",
     "sass-lint": "^1.13.1",
     "sass-loader": "^16.0.5",
-    "sinon": "^19.0.2",
+    "sinon": "^19.0.5",
     "sinon-chai": "^4.0.0",
     "sonar-scanner": "^3.1.0",
     "style-loader": "^4.0.0",
-    "superagent": "^10.1.1",
-    "ts-jest": "^29.2.6",
+    "superagent": "10.2.1",
+    "ts-jest": "^29.3.2",
     "ts-loader": "^9.5.2",
     "tslint": "^6.1.3",
-    "webpack": "^5.97.1",
+    "webpack": "^5.99.8",
     "webpack-cli": "^4.10.0",
     "webpack-dev-middleware": "^5.3.4",
     "webpack-node-externals": "^3.0.0"
@@ -146,7 +145,8 @@
     "cookie": ">=0.7.0",
     "cross-spawn": ">=7.0.5",
     "@hmcts/info-provider/path-to-regexp": "0.1.12",
-    "@npmcli/fs": "^4.0.0"
+    "@npmcli/fs": "^4.0.0",
+    "formidable": "3.5.4"
   },
-  "packageManager": "yarn@4.6.0"
+  "packageManager": "yarn@4.9.1"
 }
