Use common playwright library for common code & config (#88)
* Using common lib

* Update playwright common version and fix table mapping

* Use common components from shared library

* Use session utils from common lib

* Update to latest

* Fix component name

* Fix docker commands

* Use chromium instead of chrome for snapshots as it comes pre-installed with docker image

* Use fixtures in global setup

* Pascal case for passing class itself

* Use common library for linting

* Update snapshots

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@axe-core/playwright": "^4.10.0",
     "@eslint/js": "^9.11.1",
+    "@hmcts/playwright-common": "^1.0.14",
     "@playwright/test": "^1.48.2",
     "@types/node": "^22.6.1",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
@@ -35,8 +36,8 @@
     "test:a11y": "yarn playwright test tests/ --grep @a11y --project=chrome",
     "build-container": "docker build -t playwright-container .",
     "start-container": "docker run --rm -it --network host --ipc=host -v \"$(pwd)\":/playwright -w /playwright playwright-container /bin/bash",
-    "test:visual": "yarn playwright test tests/ --grep @visual --project=chrome",
-    "test:update-snapshots": "yarn playwright test tests/ --grep @visual --project=chrome --update-snapshots"
+    "test:visual": "yarn playwright test tests/ --grep @visual --project=chromium",
+    "test:update-snapshots": "yarn playwright test tests/ --grep @visual --project=chromium --update-snapshots"
   },
   "packageManager": "yarn@4.9.1"
 }
