--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "devDependencies": {
     "@axe-core/playwright": "^4.10.0",
     "@eslint/js": "^9.11.1",
-    "@hmcts/playwright-common": "^1.0.16",
+    "@hmcts/playwright-common": "^1.0.17",
     "@playwright/test": "^1.48.2",
     "@types/node": "^22.6.1",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
@@ -27,6 +27,7 @@
   "scripts": {
     "lint": "yarn tsc -p tsconfig.json && yarn eslint .",
     "setup": "yarn playwright install --with-deps",
+    "load-secrets": "yarn node scripts/get-secrets.js",
     "test:chrome": "yarn playwright test tests/ --project=chrome --grep-invert='(@a11y)|(@performance)|(@visual)'",
     "test:firefox": "yarn playwright test tests/ --project=firefox --grep-invert='(@a11y)|(@performance)|(@visual)'",
     "test:webkit": "yarn playwright test tests/ --project=webkit --grep-invert='(@a11y)|(@performance)|(@visual)'",
