--- a/java/build.gradle
+++ b/java/build.gradle
@@ -11,18 +11,18 @@ java {
 
 // tag::repositories[]
 repositories {
-    mavenLocal()
-    mavenCentral()
-    maven {
-        url 'https://jitpack.io'
-    }
+  mavenLocal()
+  mavenCentral()
+  maven {
+    url = uri('https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1')
+  }
 }
 // end::repositories[]
 
 // tag::dependencies[]
 dependencies {
     testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.4'
-    testImplementation 'com.github.hmcts:fortify-client:1.3.0:all'
+    testImplementation 'com.github.hmcts:fortify-client:1.4.9'
 }
 // end::dependencies[]
 
