create citizen user test using common library idam utils

--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "test:visual": "yarn playwright test tests/ --grep @visual --project=chromium",
     "test:update-snapshots": "yarn playwright test tests/ --grep @visual --project=chromium --update-snapshots"
   },
-  "packageManager": "yarn@4.9.2"
+  "packageManager": "yarn@4.9.2",
+  "dependencies": {
+    "uuid": "^11.1.0"
+  }
 }
