add idam url as env var

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,5 @@ CITIZEN_PASSWORD=
 # Idam
 IDAM_SECRET=
 IDAM_CITIZEN_USER_PASSWORD=
+IDAM_WEB_URL=https://idam-web-public.aat.platform.hmcts.net
+IDAM_TESTING_SUPPORT_URL=https://idam-testing-support-api.aat.platform.hmcts.net
