--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "allure-playwright": "^2.15.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.2.1",
+    "brace-expansion": "4.0.1",
     "chai": "^4.5.0",
     "chai-as-promised": "^7.1.2",
     "chokidar": "^3.6.0",
@@ -146,8 +147,7 @@
     "cross-spawn": ">=7.0.5",
     "@hmcts/info-provider/path-to-regexp": "0.1.12",
     "@npmcli/fs": "^4.0.0",
-    "formidable": "3.5.4",
-    "brace-expansion": "4.0.1"
+    "formidable": "3.5.4"
   },
   "packageManager": "yarn@4.9.1"
 }
