--- a/package.json
+++ b/package.json
@@ -32,17 +32,17 @@
     "@hmcts/properties-volume": "^1.2.0",
     "@npmcli/fs": "^4.0.0",
     "@types/config": "^3.3.5",
-    "@types/cookie-parser": "^1.4.8",
+    "@types/cookie-parser": "^1.4.9",
     "@types/es6-promisify": "^6.0.4",
     "@types/express": "^5.0.1",
     "@types/glob": "^8.1.0",
     "@types/helmet": "^0.0.48",
-    "@types/lodash": "^4.17.16",
+    "@types/lodash": "^4.17.17",
     "@types/node": "^18.19.99",
     "@types/nunjucks": "^3.2.6",
     "@types/require-directory": "^2.1.6",
     "@types/serve-favicon": "^2.5.7",
-    "applicationinsights": "^2.9.6",
+    "applicationinsights": "^2.9.7",
     "autobind-decorator": "^2.4.0",
     "awilix": "^7.0.3",
     "axios": "1.9.0",
@@ -53,7 +53,7 @@
     "express": "4.21.2",
     "express-nunjucks": "^3.1.2",
     "glob-parent": "6.0.2",
-    "govuk-frontend": "^5.10.0",
+    "govuk-frontend": "^5.10.2",
     "helmet": "^4.6.0",
     "http-proxy-middleware": "^2.0.9",
     "i18next": "^21.10.0",
@@ -63,7 +63,7 @@
     "lodash": "^4.17.21",
     "nunjucks": "^3.2.4",
     "require-directory": "^2.1.1",
-    "serve-favicon": "^2.5.0",
+    "serve-favicon": "^2.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^4.9.5"
@@ -87,6 +87,7 @@
     "allure-playwright": "^2.15.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.2.1",
+    "brace-expansion": "4.0.1",
     "chai": "^4.5.0",
     "chai-as-promised": "^7.1.2",
     "chokidar": "^3.6.0",
@@ -94,7 +95,7 @@
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "cucumber": "^6.0.7",
-    "debug": "^4.4.0",
+    "debug": "^4.4.1",
     "eslint": "^8.57.1",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
