--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,10 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "github>hmcts/.github//renovate/automerge-minor",
+    "github>hmcts/.github//renovate/automerge-all",
     "local>hmcts/.github:renovate-config"
   ],
-  "automerge": false,
+  "automerge": true,
   "groupName": "all dependencies",
   "separateMajorMinor": true,
   "groupSlug": "all",
