changed to match rpts

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,23 +1,8 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "github>hmcts/.github//renovate/automerge-all",
+    "local>hmcts/.github//renovate/automerge-all",
     "local>hmcts/.github:renovate-config"
   ],
-  "automerge": true,
-  "groupName": "all dependencies",
-  "separateMajorMinor": true,
-  "groupSlug": "all",
-  "packageRules": [
-    {
-      "matchPackagePatterns": [
-        "*"
-      ],
-      "groupName": "all dependencies",
-      "groupSlug": "all"
-    }
-  ],
-  "lockFileMaintenance": {
-    "enabled": false
-  }
+  "automerge": true
 }
