52 fix edge stage (#113)
* Allow tests to be run via browser

* fix

* Determine environment

* Remove env params

* Must use single quotes for replacement later on

* Add browsers to build info

* use node_modules

* Add edge stage and use hermetic install method

* tidy

* Use for tagged runs

* Update Jenkinsfile_nightly

* Rename script

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "scripts": {
     "lint": "yarn tsc -p tsconfig.json && yarn eslint .",
     "setup": "yarn playwright install --with-deps",
+    "setup:edge": "PLAYWRIGHT_BROWSERS_PATH=0 yarn playwright install msedge --with-deps",
     "load-secrets": "yarn node scripts/get-secrets.js",
     "test:chrome": "yarn playwright test tests/ --project=chrome --grep-invert='(@a11y)|(@performance)|(@visual)'",
     "test:firefox": "yarn playwright test tests/ --project=firefox --grep-invert='(@a11y)|(@performance)|(@visual)'",
