--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "test:pa11y": "NODE_TLS_REJECT_UNAUTHORIZED=0 jest -c jest.a11y.config.js --maxWorkers 15",
     "sonar-scan": "sonar-scanner",
     "fortifyScan": "./java/gradlew -p java fortifyScan",
-    "test:smoke": "jest -c jest.smoke.config.js",
-    "test:functional": "yarn playwright test",
+    "test:smoke": "yarn playwright test --project smoke",
+    "test:functional": "yarn playwright test --project chromium --project firefox --project webkit",
     "test:functional:report": "allure generate functional-output/functional/reports/ -c -o functional-output/functional/allure",
     "test:codecept": "NODE_TLS_REJECT_UNAUTHORIZED=0 codeceptjs run-workers 4 parallel --config ./src/test/functional/codecept.conf.js",
     "stub:api": "ts-node -r tsconfig-paths/register api/fact-api-stubs.ts",
