--- a/package.json
+++ b/package.json
@@ -147,7 +147,8 @@
     "cross-spawn": ">=7.0.5",
     "@hmcts/info-provider/path-to-regexp": "0.1.12",
     "@npmcli/fs": "^4.0.0",
-    "formidable": "3.5.4"
+    "formidable": "3.5.4",
+    "form-data": ">=4.0.4"
   },
   "packageManager": "yarn@4.9.1"
 }
