--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "applicationinsights": "^2.9.7",
     "autobind-decorator": "^2.4.0",
     "awilix": "^7.0.3",
-    "axios": "1.9.0",
+    "axios": "1.11.0",
     "cacache": "^19.0.1",
     "config": "^3.3.12",
     "cookie-parser": "^1.4.7",
@@ -70,9 +70,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
+    "@babel/eslint-parser": "^7.11.0",
     "@babel/preset-env": "^7.27.2",
     "@codeceptjs/allure-legacy": "^1.0.2",
     "@codeceptjs/configure": "^0.10.0",
+    "@cucumber/cucumber": "^7.0.0",
     "@playwright/test": "^1.52.0",
     "@types/chai-as-promised": "^8.0.2",
     "@types/cucumber": "^7.0.3",
@@ -85,7 +87,6 @@
     "@typescript-eslint/parser": "^5.62.0",
     "allure-commandline": "^2.34.0",
     "allure-playwright": "^2.15.1",
-    "@babel/eslint-parser": "^7.11.0",
     "babel-loader": "^9.2.1",
     "brace-expansion": "4.0.1",
     "chai": "^4.5.0",
@@ -94,7 +95,6 @@
     "codeceptjs": "^3.7.3",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
-    "@cucumber/cucumber": "^7.0.0",
     "debug": "^4.4.1",
     "eslint": "^8.57.1",
     "html-webpack-plugin": "^5.6.3",
@@ -114,7 +114,7 @@
     "sinon-chai": "^4.0.0",
     "sonar-scanner": "^3.1.0",
     "style-loader": "^4.0.0",
-    "superagent": "10.2.1",
+    "superagent": "10.2.2",
     "ts-jest": "^29.3.2",
     "ts-loader": "^9.5.2",
     "tslint": "^6.1.3",
@@ -135,8 +135,8 @@
     "follow-redirects": ">=1.15.6",
     "word-wrap": ">=1.2.4",
     "ip": "https://registry.npmjs.org/neoip/-/neoip-2.1.0.tgz",
-    "axios": ">=1.8.3",
     "axios>follow-redirects": ">=1.15.4",
+    "axios": "1.11.0",
     "http-proxy-middleware>http-proxy>follow-redirects": ">=1.15.4",
     "@types/http-proxy-middleware>http-proxy-middleware>http-proxy>follow-redirects": ">=1.15.4",
     "express": "4.21.2",
@@ -147,7 +147,8 @@
     "cross-spawn": ">=7.0.5",
     "@hmcts/info-provider/path-to-regexp": "0.1.12",
     "@npmcli/fs": "^4.0.0",
-    "formidable": "3.5.4"
+    "formidable": "3.5.4",
+    "form-data": ">=4.0.4"
   },
   "packageManager": "yarn@4.9.1"
 }
