--- a/charts/fact-frontend/values.aat.template.yaml
+++ b/charts/fact-frontend/values.aat.template.yaml
@@ -1,4 +1,9 @@
 nodejs:
+  keyVaults:
+    fact:
+      resourceGroup: fact
+      secrets:
+        - AppInsightsInstrumentationKey-ai
   # Don't modify below here
   image: ${IMAGE_NAME}
   ingressHost: ${SERVICE_FQDN}
