--- a/charts/fact-frontend/values.yaml
+++ b/charts/fact-frontend/values.yaml
@@ -9,7 +9,8 @@ nodejs:
     fact:
       resourceGroup: fact
       secrets:
-        - AppInsightsInstrumentationKey-ai
+        - name: AppInsightsInstrumentationKey-ai
+          alias: APPINSIGHTS_INSTRUMENTATIONKEY
   ingressHost: fact.{{ .Values.global.environment }}.platform.hmcts.net
   image: 'hmctspublic.azurecr.io/fact/frontend:latest'
   environment:
