FACT-2488 Commit of expressjs test setup for MI Auth PoC

--- a/config/custom-environment-variables.yaml
+++ b/config/custom-environment-variables.yaml
@@ -7,3 +7,7 @@ services:
     url: IMAGE_BASE_URL
 appInsights:
   instrumentationKey: APPINSIGHTS_KEY
+poc:
+  serviceAppRegId: POC_SERVICE_APP_REG_ID
+  clientAppRegId: POC_CLIENT_APP_REG_ID
+  clientAppSecret: POC_CLIENT_APP_SECRET
