--- a/config/default.yaml
+++ b/config/default.yaml
@@ -8,7 +8,7 @@ services:
     url: 'http://localhost:3100'
   api:
     name: 'FACT API'
-    url: 'http://localhost:8080'
+    url: 'http://localhost:8989'
   image-store:
     name: 'Image Store'
     url: 'https://factaat.blob.core.windows.net/images'
@@ -20,3 +20,7 @@ health:
   deadline: 15000
 appInsights:
   instrumentationKey:
+poc:
+  serviceAppRegId:
+  clientAppRegId:
+  clientAppSecret:
