--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "cichecks": "yarn && yarn build && yarn lint && yarn test"
   },
   "dependencies": {
+    "@azure/msal-common": "^15.13.0",
+    "@azure/msal-node": "^3.8.0",
     "@hmcts/cookie-manager": "1.1.0",
     "@hmcts/info-provider": "^1.2.3",
     "@hmcts/nodejs-healthcheck": "^1.8.5",
