--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "codeceptjs": "^3.7.3",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
+    "eslint": "^8.57.1",
     "html-webpack-plugin": "^5.6.5",
     "jest": "^29.7.0",
     "jest-when": "^3.7.0",
@@ -111,5 +112,5 @@
     "webpack-dev-middleware": "^7.4.5",
     "webpack-node-externals": "^3.0.0"
   },
-  "packageManager": "yarn@4.10.3"
+  "packageManager": "yarn@4.12.0"
 }
