--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.28.5",
     "@codeceptjs/allure-legacy": "^1.0.2",
     "@codeceptjs/configure": "^1.0.0",
     "@cucumber/cucumber": "^12.0.0",
@@ -78,6 +79,9 @@
     "@types/jest": "^29.5.14",
     "@types/jest-when": "^3.5.5",
     "@types/supertest": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.48.1",
+    "@typescript-eslint/eslint-plugin-tslint": "^7.0.2",
+    "@typescript-eslint/parser": "^8.48.1",
     "allure-commandline": "^2.34.0",
     "allure-playwright": "^2.15.1",
     "chai": "^4.5.0",
