--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "codeceptjs": "^3.7.3",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
+    "debug": "^4.4.3",
     "eslint": "^8.57.1",
     "html-webpack-plugin": "^5.6.5",
     "jest": "^29.7.0",
