--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "applicationinsights": "^2.9.8",
     "autobind-decorator": "^2.4.0",
     "awilix": "^12.0.0",
-    "axios": "1.13.2",
+    "axios": "1.13.5",
     "cacache": "^20.0.3",
     "config": "^3.3.12",
     "cookie-parser": "^1.4.7",
@@ -118,6 +118,9 @@
     "webpack-node-externals": "^3.0.0"
   },
   "resolutions": {
+    "axios@npm:1.11.0": "1.13.5",
+    "cacache@npm:^19.0.1": "20.0.3",
+    "glob@npm:^10.4.5": "11.1.0",
     "jsonwebtoken": "^9.0.3",
     "js-yaml": "^3.14.2",
     "jws": "4.0.1"
